--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "recover": "node utils/recover.js -k=Ld55m324KLZWo63H9pooUuub6pftpRRWB6"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.7",
-    "@nestjs/core": "^7.6.1",
+    "@nestjs/common": "^7.6.12",
+    "@nestjs/core": "^7.6.12",
     "@nestjs/jwt": "^7.2.0",
-    "@nestjs/mongoose": "^7.2.0",
+    "@nestjs/mongoose": "^7.2.3",
     "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-express": "^7.6.1",
+    "@nestjs/platform-express": "^7.6.12",
     "@nestjs/typeorm": "^7.1.5",
-    "@scrypta/core": "^2.9.1",
-    "@types/mongodb": "^3.6.3",
-    "aws-sdk": "^2.832.0",
+    "@scrypta/core": "^3.0.6",
+    "@types/mongodb": "^3.6.7",
+    "aws-sdk": "^2.843.0",
+    "axios": "^0.21.1",
+    "bip32": "^2.0.6",
+    "bitcoinjs-lib": "^5.2.0",
     "cache-manager": "^3.4.0",
     "cookie-parser": "^1.4.5",
     "crypto": "^1.0.1",
@@ -40,47 +43,48 @@
     "dotenv": "^8.2.0",
     "download-file": "^0.1.5",
     "express": "^4.17.1",
-    "express-rate-limit": "^5.2.3",
+    "express-rate-limit": "^5.2.5",
     "file-type": "^16.2.0",
     "formidable": "^1.2.2",
-    "helmet": "^4.2.0",
+    "helmet": "^4.4.1",
     "lzutf8": "^0.5.8",
     "minimist": "^1.2.5",
-    "mongodb": "^3.6.3",
-    "mongoose": "^5.11.7",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.11.16",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "qrcode": "^1.4.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
-    "typeorm": "^0.2.30"
+    "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.4",
-    "@nestjs/schematics": "^7.2.5",
-    "@nestjs/testing": "^7.6.1",
-    "@types/express": "^4.17.9",
-    "@types/jest": "26.0.19",
-    "@types/node": "^14.14.12",
-    "@types/passport-jwt": "^3.0.3",
+    "@nestjs/schematics": "^7.2.7",
+    "@nestjs/testing": "^7.6.12",
+    "@types/express": "^4.17.11",
+    "@types/jest": "26.0.20",
+    "@types/node": "^14.14.28",
+    "@types/passport-jwt": "^3.0.4",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
-    "supertest": "^6.0.1",
-    "ts-jest": "26.4.4",
-    "ts-loader": "^8.0.12",
+    "supertest": "^6.1.3",
+    "ts-jest": "26.5.1",
+    "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.5"
   },
   "jest": {
     "moduleFileExtensions": [
